--- a/about/assemble/src/pages/molecularmachine.ja.hbs
+++ b/about/assemble/src/pages/molecularmachine.ja.hbs
@@ -17,7 +17,7 @@ name: molecularmachine
                 <div class="row">
                     <div class="col-md-12">
                         <p class="lead">
-                            生体内でタンパク質は、分子の動きを精密に制御することで洗練された機能を発揮する分子機械です。それに触発され、有機合成的に設計された複数のパーツを分子間相互作用によって連動させ、光異性化の機械的な動きを遠隔に伝える合成分子機械を構築しました（Kai, et al. <a href='http://pubs.acs.org/doi/abs/10.1021/ja801646b'>JACS 2008</a>）。
+                            タンパク質は、分子の動きを精密に制御することで洗練された機能を発揮する生体分子機械です。それに触発され、有機合成的に設計された複数のパーツを分子間相互作用によって連動させ、光異性化の機械的な動きを遠隔に伝える合成分子機械を構築しました（Kai, et al. <a href='http://pubs.acs.org/doi/abs/10.1021/ja801646b'>JACS 2008</a>）。
                         </p>
                     </div>
                 </div>
