--- a/about/assemble/src/pages/contact.hbs
+++ b/about/assemble/src/pages/contact.hbs
@@ -20,7 +20,7 @@ name: contact
                 424 Stanley Hall<br>
                 University of California, Berkeley 94720<br>
                 USA<br>
-                Email: hkai at berkeley edu<br>
+                Email: hiroyukikai at berkeley edu<br>
                 Phone: +1-520-684-0412
             </div>
         </div>
