--- a/about/assemble/src/pages/contact.ja.hbs
+++ b/about/assemble/src/pages/contact.ja.hbs
@@ -21,7 +21,7 @@ name: contact
                 University of California, Berkeley 94720<br>
                 USA<br>
                 <br>
-                Email: hiroyukikai at berkeley edu<br>
+                Email: hiroyukikai[at]berkeley[dot]edu<br>
                 Phone: +1-520-684-0412
             </div>
         </div>
