--- a/jrecin/partials/phone-list.html
+++ b/jrecin/partials/phone-list.html
@@ -67,7 +67,7 @@
     <div class="col-md-9">
       <!--Body content-->
       <div id='righttop'>
-<div class="fb-like" data-href="https://hirokai.github.io/jrec-in" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+<div class="fb-like" data-href="http://hirokai.github.io/jrecin/#/grid" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
       </div>
 
 <div id='topinfo'>
