--- a/about/assemble/src/pages/contact.hbs
+++ b/about/assemble/src/pages/contact.hbs
@@ -16,13 +16,12 @@ name: contact
         <div class="col-md-12">
             <div>
                 Hiroyuki Kai <br>
-                Department of Chemistry<br>
-                424 Stanley Hall<br>
-                University of California, Berkeley 94720<br>
-                USA<br>
+                Division of Mechanical Engineering<br>
+                Tohoku University<br>
+                Japan<br>
                 <br>
-                Email: hiroyukikai[at]berkeley[dot]edu<br>
-                Phone: +1-520-684-0412
+                Email: hk.biomems[at]gmail[dot]com<br>
+                Phone: +81-22-795-3586
             </div>
         </div>
     </div>
