--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -29,19 +29,20 @@ name: index
             </section>
             <section id='affiliation'>
                 <h3>Current affiliation</h3>
-                Graduate Student Researcher, University of California, Berkeley (from 2010).<br>
-                Supervisor: Prof. Jay T. Groves.
+                Matsuhiko Nishizawa Group in Division of Mechanical Engineering, Tohoku University (from April, 2015).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
-                Spatiotemporal dynamics of juxtacrine signaling of T cells using (1) live-cell fluorescence microscopy and (2) nanofabricated materials.
+                    Development of flexible biosensors based on materials science and electrochemistry.
             </section>
             <section id='research-past'>
                 <h3>Past topics of research</h3>
-                <ul></ul>
+                <ul>
+                <li>Spatiotemporal dynamics of juxtacrine signaling of T cells using (1) live-cell fluorescence microscopy and (2) nanofabricated materials.</li>
                 <li>Supramolecular machines for remote transmission of molecular motion.</li>
                 <li>Nanofillers for toughening thermoplastics.</li>
                 <li>Thermoplastics made from cellulose derivatives and cashew extract.</li>
+                </ul>
             </section>
             <section id='experience'>
                 <h3>Education and experience</h3>
