--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -47,7 +47,7 @@ name: index
             <section id='experience'>
                 <h3>Education and experience</h3>
                 <ul>
-                    <li>2010-: PhD candidate, Department of Chemistry, University of California, Berkeley.</li>
+                    <li>2010-2015: Graduate Student Researcher, Department of Chemistry, University of California, Berkeley. PhD in Chemistry.</li>
                     <li>2008-2010: Researcher, Nanoelectronics Laboratory, NEC Corporation.</li>
                     <li>2006-2008: Department of Chemistry and Biotechnology, The University of Tokyo (Master of Engineering)</li>
                     <li>2002-2006: Department of Chemistry and Biotechnology, The University of Tokyo (Bachelor of Engineering)</li>
