--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -14,7 +14,7 @@ name: index
     <div class="row">
         <div class="col-md-12">
             <img src="img/welcome.jpg" width='105%' style="margin: -20px -50px 0px -20px;"><br>
-            <p class="lead">生物工学者です。幅広いバックグラウンドを持ち、材料・情報・生物の分野融合研究に興味があります。</p>
+            <p class="lead">生体応用を志向した材料科学者です。幅広いバックグラウンドを持ち、材料・情報・生物の分野融合研究に興味があります。</p>
 
             <h3>現在の所属</h3>
             東北大学工学研究科機械・知能系バイオロボティクス専攻　西澤・梶研究室　特任助教（2015年4月より）<br>
