--- a/about/assemble/src/pages/programming.ja.hbs
+++ b/about/assemble/src/pages/programming.ja.hbs
@@ -25,7 +25,7 @@ name: programming
           <div class="col-md-12">
               <h2>実験データを効率的に管理するための小技とスニペット集</h2>
               <ul>
-                <li><a href="../tips/google_sheet_csv.html">PythonからGoogle Sheetsを読む</a></li>
+                <li><a href="https://gist.github.com/hirokai/349ea38076c54417d195">スクリプトからGoogle Sheetsを読む</a></li>
               </ul>
           </div>
         </div>
