--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -61,12 +61,13 @@ name: index
                   </li>
                   <li>
                     ResearcherID: <a href="http://www.researcherid.com/rid/H-8704-2015">H-8704-2015</a>
-                    <span id='badgeCont794084' style='width:26px'><script src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>                  </li>
+                    <span id='badgeCont794084' style='width:26px'><script src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>
+                  </li>
                   <li>
                     Scopus Author ID: <a href="http://www.scopus.com/authid/detail.uri?authorId=56763601000">56763601000</a>
                   </li>
                 </ul>
-                <span style='margin-left: 20px;'>(&#x2021; indicates first coauthorship.)</span>
+                <span style='margin-left: 20px;'>(&#x2021; indicates equal contribution.)</span>
                 <ol class='publication' reversed>
                     {{#each publication}}
                     <li>{{{paper .}}}</li>
