Add 2 presentations. Update experience.

--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -17,7 +17,7 @@ name: index
             <p class="lead">生体応用を志向した材料科学者です。幅広いバックグラウンドを持ち、材料・情報・生物の分野融合研究に興味があります。</p>
 
             <h3>現在の所属</h3>
-            東北大学工学研究科機械・知能系バイオロボティクス専攻　西澤・梶研究室　特任助教（2015年4月より）<br>
+            東北大学工学研究科機械・知能系　西澤・梶研究室　特任助教（2015年4月より）<br>
 
             <h3>現在の研究</h3>
                 電気化学・材料科学をベースとした、皮膚貼り付け型センサ等の開発
@@ -32,6 +32,7 @@ name: index
 
             <h3>経歴</h3>
             <ul>
+                <li>2015-: 東北大学工学研究科西澤研究室　特任助教</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
