Add grants. Layout change.

--- a/about/assemble/src/layouts/default.ja.hbs
+++ b/about/assemble/src/layouts/default.ja.hbs
@@ -52,6 +52,10 @@
 <!--                <li class="sidebar-brand"><a href="#">Contents</a>
                 </li> -->
                 <li><a href="index.ja.html">トップ</a>
+                <ul>
+                    <li><a href="publication.ja.html">論文</a></li>
+                    <li><a href="presentation.ja.html">学会発表</a></li>
+                </ul>
                 </li>
                 <li><a class='nohover' href="#">興味</a>
                 <ul>
