--- a/about/assemble/src/pages/publication.hbs
+++ b/about/assemble/src/pages/publication.hbs
@@ -6,7 +6,7 @@ name: publication
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Hiroyuki Kai <span style='font-size: 21px'>甲斐 洋行</span>
+        Hiroyuki Kai
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
