--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -64,7 +64,7 @@ name: index
             <section id='grant'>
                 <h3>Research grants</h3>
                 <ol class='grant' reversed>
-                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B) &quot;Development of multiplexed microneedle array for vital senging on skin.&quot;</li>
+                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
                     <li>2017 COI research grant for collaborative research by young researchers.</li>
                 </ol>
             </section>            
