Update research description and paper.

--- a/about/assemble/src/layouts/default.ja.hbs
+++ b/about/assemble/src/layouts/default.ja.hbs
@@ -57,12 +57,15 @@
                     <li><a href="presentation.ja.html">学会発表</a></li>
                 </ul>
                 </li>
-                <li><a class='nohover' href="#">興味</a>
+                <li><a class='nohover' href="#">研究内容・興味</a>
                 <ul>
-                    <li><a href="signaling.ja.html">T細胞シグナリング</a></li>
-                    <li><a href="nanobio.ja.html">ナノ・バイオ境界</a></li>
-                    <li><a href="molecularmachine.ja.html">合成分子機械</a></li>
+                    <li><a href="skininterface.ja.html">皮膚インターフェイス</a></li>
                     <li><a href="programming.ja.html">プログラミング </a></li>
+                </ul>
+                <li><a class='nohover' href="#">過去の研究</a>
+                <ul>
+                    <li><a href="nanobio.ja.html">ナノバイオ</a></li>
+                    <li><a href="chemistry.ja.html">超分子機械・高分子材料</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.ja.html">スキル</a>
