--- a/about/assemble/src/pages/contact.hbs
+++ b/about/assemble/src/pages/contact.hbs
@@ -20,7 +20,7 @@ name: contact
                 Tohoku University<br>
                 Japan<br>
                 <br>
-                Email: hk.biomems[at]gmail[dot]com<br>
+                Email: kai[at]tohoku[dot]ac[dot]jp<br>
                 Phone: +81-22-795-3586
             </div>
         </div>
