--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -35,7 +35,7 @@ name: index
             </section>
             <section id='affiliation'>
                 <h3>Current affiliation</h3>
-                Matsuhiko Nishizawa Group in Division of Mechanical Engineering, Tohoku University (from April, 2015).<br>
+                Department of Engineering, Tohoku University (from April, 2015).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
@@ -64,6 +64,8 @@ name: index
             <section id='grant'>
                 <h3>Research grants</h3>
                 <ol class='grant' reversed>
+                    <li>2018 COI research grant for collaborative research by young researchers.</li>
+                    <li>2018 The Kao Science Encouragement Award.</li>
                     <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers.</li>
                     <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
                     <li>2017 COI research grant for collaborative research by young researchers.</li>
