--- a/about/assemble/src/pages/nanobio.hbs
+++ b/about/assemble/src/pages/nanobio.hbs
@@ -17,7 +17,7 @@ name: nanobio
     <div class="row">
         <div class="col-md-12">
             <p class="lead">
-            Nanomaterials can be tailored to match the dimensions of signaling assemblies on the cell surface. I use top-down and bottom-up approaches to fabricate micro/nanostructures (40 nm-10 µm), and combine them with a supported lipid bilayer (SLB) to reveal spatiotemporal behavior of signaling assemblies on the T cell membrane.
+            Nanomaterials can be tailored to match the dimensions of signaling assemblies on the cell surface. I used top-down and bottom-up approaches to fabricate micro/nanostructures (40 nm-10 µm), and combine them with a supported lipid bilayer (SLB) to reveal spatiotemporal behavior of signaling assemblies on the T cell membrane.
             </p>
         </div>
         <div class="col-md-6">
