--- a/about/assemble/src/pages/nanobio.ja.hbs
+++ b/about/assemble/src/pages/nanobio.ja.hbs
@@ -17,7 +17,7 @@ name: nanobio
     <div class="row">
         <div class="col-md-12">
             <p class="lead">
-                サイズのコントロールされたミクロ／ナノ構造を用い、細胞表面のレセプターの集合体形成と輸送の動的挙動を操作・観察することができます。トップダウン型あるいはボトムアップ型のアプローチにより、数10 nm〜10 µmオーダーの微小構造を形成し、それとsupported lipid bilayer (SLB) を組み合わせることで、シグナル分子の集合体の動的挙動を研究しています。
+                サイズのコントロールされたミクロ／ナノ構造を用い、細胞表面のレセプターの集合体形成と輸送の動的挙動を操作・観察することができます。トップダウン型あるいはボトムアップ型のアプローチにより、数10 nm〜10 µmオーダーの微小構造を形成し、それとsupported lipid bilayer (SLB) を組み合わせることで、シグナル分子の集合体の動的挙動を研究しました。
             </p>
         </div>
         <div class="col-md-6">
