--- a/about/assemble/src/includes/skilllist.hbs
+++ b/about/assemble/src/includes/skilllist.hbs
@@ -22,7 +22,7 @@
             <li>UV-Vis, IR</li>
             <li>Circular dichroism</li>
             <li>SEM</li>
-
+            <li>Cyclic voltammetry</li>
         </ul>
     </li>
 
@@ -45,9 +45,9 @@
     <li>Programming
         <ul>
             <li>Various programming languages (Scala, Haskell, JavaScript, C/C++, Matlab, Ruby, Python, Java, etc.)</li>
-            <li>Image and data analysis (scipy, OpenCV, scikit-learn, Halide, etc.)</li>
+            <li>Image and data analysis (SciPy, OpenCV, scikit-learn, Halide, pandas, etc.)</li>
             <li>Automation of experiment by scripting</li>
-            <li>Web app development (Play! framework, AngularJS, Meteor, etc.)</li>
+            <li>Web app development (Play! framework, Ruby on Rails, AngularJS, React, Meteor, etc.)</li>
             <li>Data visualization (D3.js)</li>
         </ul>
     </li>
