--- a/about/assemble/src/pages/contact.ja.hbs
+++ b/about/assemble/src/pages/contact.ja.hbs
@@ -18,7 +18,7 @@ name: contact
                 甲斐洋行 (Hiroyuki Kai) <br>
                 東北大学　工学研究科　機械・知能系<br>
                 <br>
-                Email: hk.biomems[at]gmail[dot]com<br>
+                Email: kai[at]tohoku[dot]ac[dot]jp<br>
                 Phone: +81-22-795-3586
             </div>
         </div>
