--- a/about/assemble/src/pages/presentation.hbs
+++ b/about/assemble/src/pages/presentation.hbs
@@ -6,7 +6,7 @@ name: presentation
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Hiroyuki Kai
+        Presentations
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
@@ -14,7 +14,6 @@ name: presentation
     <div class="row">
         <div class="col-md-12">
           <section id='presentation'>
-            <h3>Presentations</h3>
             <ol class='publication' reversed>
                 {{#each presentation}}
                 <li>{{{.}}}</li>
