--- a/about/assemble/src/pages/publication.hbs
+++ b/about/assemble/src/pages/publication.hbs
@@ -6,7 +6,7 @@ name: publication
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Hiroyuki Kai
+        Publication
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
@@ -14,14 +14,13 @@ name: publication
     <div class="row">
         <div class="col-md-12">
              <section id='publication'>
-                <h3>Publication</h3>
                 <ul class='researcher-id'>
                   <li>
                     ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
                   </li>
                   <li>
                     ResearcherID: <a href="http://www.researcherid.com/rid/H-8704-2015">H-8704-2015</a>
-                    <span id='badgeCont794084' style='width:26px'><script src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>
+                    <span id='badgeCont794084' style='width:26px'><script defer src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>
                   </li>
                   <li>
                     Scopus Author ID: <a href="http://www.scopus.com/authid/detail.uri?authorId=56763601000">56763601000</a>
