Add presentation and awards

--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -64,6 +64,7 @@ name: index
             <section id='grant'>
                 <h3>Research grants</h3>
                 <ol class='grant' reversed>
+                    <li>2018 Tohoku University FRIS Creative Interdisciplinary Research Program.</li>
                     <li>2018 COI research grant for collaborative research by young researchers.</li>
                     <li>2018 The Kao Science Encouragement Award.</li>
                     <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers.</li>
