--- a/about/assemble/src/includes/common.hbs
+++ b/about/assemble/src/includes/common.hbs
@@ -4,11 +4,13 @@
     }
     ol.publication li {
         margin-bottom: 10px;
+        font-size: 16px ! important;
     }
     a.nohover:hover {
         cursor: default;
         color: #999999 ! important;
         background: black ! important;
     }
+
 
 </style>
