Use separate json for presentation.ja

--- a/about/assemble/src/pages/presentation.ja.hbs
+++ b/about/assemble/src/pages/presentation.ja.hbs
@@ -15,7 +15,7 @@ name: presentation
         <div class="col-md-12">
          <p>自分で行った発表のみを表記。</p>
         <ol class='publication' reversed>
-            {{#each presentation}}
+            {{#each presentation_ja}}
             <li>{{.}}</li>
             {{/each}}
         </ol>
