New format for presentation and data (work in progress)

--- a/about/assemble/src/pages/presentation.hbs
+++ b/about/assemble/src/pages/presentation.hbs
@@ -16,7 +16,7 @@ name: presentation
           <section id='presentation'>
             <ol class='publication' reversed>
                 {{#each presentation}}
-                <li>{{{.}}}</li>
+                <li>{{{presentation .}}}</li>
                 {{/each}}
             </ol>
           </section>
