Update top page.

--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -32,13 +32,13 @@ name: index
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <h3>現在の所属</h3>
-            東北大学工学研究科機械・知能系　西澤・梶研究室　特任助教（JST COI-STREAM）（2015年4月より）<br>
+            <h3>所属</h3>
+            東北大学工学研究科ファインメカニクス専攻　特任助教（西澤・梶研究室; JST COI-STREAM）（2015年4月より）<br>
 
-            <h3>現在の研究</h3>
-                材料化学・電気化学をベースとした、皮膚貼り付け型センサ・治療デバイスの開発
+            <h3>研究内容</h3>
+                有機材料化学・電気化学を基盤とした、皮膚貼り付け型センサ・治療デバイスの開発
 
-            <h3>過去の研究</h3>
+            <h3>過去の研究内容</h3>
             <ul>
                 <li>ナノ加工した材料を用いる、T細胞シグナリングの時空間制御のイメージング研究</li>
                 <li>分子の動きを遠隔に伝える超分子機械の作製</li>
@@ -47,7 +47,7 @@ name: index
 
             <h3>経歴</h3>
             <ul>
-                <li>2015-: 東北大学工学研究科西澤研究室　特任助教（JST COI-STREAM）</li>
+                <li>2015-: 東北大学工学研究科ファインメカニクス専攻　特任助教</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
@@ -56,9 +56,10 @@ name: index
             <section id='award'>
                 <h3>受賞</h3>
                 <ol class='award' reversed>
-                    <li>第４回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
-                    <li>化学とマイクロ・ナノシステム学会 第37回研究会 優秀研究賞</li>
-                    <li>花王芸術・科学財団 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」</li>
+                    <li>2018年7月 第４回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
+                    <li>2018年6月 Biosensors &amp; Bioelectronics Best Paper Award 2018 Runner Up "Organic electrochromic timer for enzymatic skin patches"</li>
+                    <li>2018年5月 化学とマイクロ・ナノシステム学会 第37回研究会 優秀研究賞</li>
+                    <li>2018年3月 花王芸術・科学財団 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」</li>
                 </ol>
             </section>            
 
