Add future presentation in ja.

--- a/about/assemble/src/includes/common.hbs
+++ b/about/assemble/src/includes/common.hbs
@@ -12,5 +12,9 @@
         background: black ! important;
     }
 
+    .monospace {
+        font-family: Osaka−等幅, monospace, "ＭＳ ゴシック", "MS Gothic";
+    }
+
 
 </style>
