--- a/about/assemble/src/pages/presentation.ja.hbs
+++ b/about/assemble/src/pages/presentation.ja.hbs
@@ -13,7 +13,17 @@ name: presentation
 <div class="page-content inset">
     <div class="row">
         <div class="col-md-12">
-         <p>自分で行った発表のみを表記。</p>
+            <h3 id='plan'>発表予定</h3>
+         <p>自分で行う発表のみを表記</p>
+        <ul class='publication' reversed>
+            <li>2018年11月28日 20:00-22:00 2018 MRS Fall Meeting (Boston) <a href="https://www.mrs.org/fall-2018-symposium-sessions/symposium-sessions-detail?code=BM08">BM08.10.02</a> &quot;Porous Polymer Microneedles for the Sensing of Subcutaneous Interstitial Fluid&quot;</li>
+            <li>2018年12月18日 09:00-09:15 第28回日本MRS年次大会 （北九州） <a href="https://www.mrs-j.org/meeting2018/jp/prg/programList_oral.php?id=F-3">F3-O19-003</a> 「蛍光グルコースセンサを一体化した多孔質樹脂マイクロニードル」</li>
+            <li>2018年12月19日 15:30-15:45 第28回日本MRS年次大会 （北九州） <a href="https://www.mrs-j.org/meeting2018/jp/prg/programList_oral.php?id=B-5">B5-O19-008</a> 「貼付型乳酸センサの作製と皮膚模倣環境での評価」</li>
+            <li>2019年&nbsp;&nbsp;3月&nbsp;&nbsp;4日 16:50-17:40 <a href="http://res.tagen.tohoku.ac.jp/~polymer/event/19ev01.html">平成30年度東北地区先端高分子セミナー</a>（仙台） 「新たな経皮インターフェイスのための高分子材料・デバイス」（招待講演）</li>
+            </ul>
+
+            <h3>発表</h3>
+         <p>自分で行った発表のみを表記</p>
         <ol class='publication' reversed>
             {{#each presentation_ja}}
             <li>{{{presentation .}}}</li>
