--- a/about/assemble/src/pages/presentation.ja.hbs
+++ b/about/assemble/src/pages/presentation.ja.hbs
@@ -24,7 +24,7 @@ name: presentation
             </ul>
 
             <h3>発表</h3>
-         <p>自分で行った発表のみを表記</p>
+         <p>自分で行った発表のみを表記。日本語表記と英語表記が混在しており、整理中です。</p>
         <ol class='publication' reversed>
             {{#each presentation_ja}}
             <li>{{{presentation .}}}</li>
