--- a/about/assemble/src/pages/publication.ja.hbs
+++ b/about/assemble/src/pages/publication.ja.hbs
@@ -14,6 +14,7 @@ name: publication
     <div class="row">
         <div class="col-md-12">
           <ul class='researcher-id'>
+            <li>Google Scholar Profile: <a href="https://scholar.google.co.jp/citations?user=1ARpHr0AAAAJ">1ARpHr0AAAAJ</a></li>
             <li>
               ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
             </li>
