--- a/about/assemble/src/pages/grants.ja.hbs
+++ b/about/assemble/src/pages/grants.ja.hbs
@@ -22,8 +22,10 @@ name: grants
                 <li>2018年度 中谷医工計測技術振興財団 技術開発研究助成【奨励研究】「皮膚上の微小流体制御による汗成分センサの開発」（代表）</li>
                 <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
             </ol>
-            <h3 id='plan'>委託研究費・学内グラント</h3>
+            <h3 id='plan'>受託研究費・学内グラント</h3>
             <ol class='grant' reversed>
+                <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「科学実験の効率を劇的に向上するための実験自動記録・実験計画支援・ラボオートメーション手法の探索」（代表）</li>
+                <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「地域コミュニティで「育てる」ローカルモビリティを支援するためのデジタル技術」（共同代表）</li>
                 <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「足を護りセンシングするアフリカ地下足袋の協創に関する研究」（分担）</li>
                 <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第二ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるハイブリッドフィルタの開発」（分担）</li>
                 <li>2018年度 東北大学 学際科学フロンティア研究所 領域創成研究プログラム「生体とデバイスとをシームレスに接続するハイブリッドインターフェースの開発」（分担）</li>
