--- a/about/assemble/src/pages/presentation.ja.hbs
+++ b/about/assemble/src/pages/presentation.ja.hbs
@@ -14,20 +14,18 @@ name: presentation
     <div class="row">
         <div class="col-md-12">
             <h3 id='plan'>発表予定</h3>
-         <p>自分で行う発表のみを表記</p>
-        <ul class='publication' reversed>
-            <li>2019年&nbsp;&nbsp;3月&nbsp;&nbsp;4日 16:50-17:40 <a href="http://res.tagen.tohoku.ac.jp/~polymer/event/19ev01.html">平成30年度東北地区先端高分子セミナー</a>（仙台秋保温泉岩沼屋）<br>「新たな経皮インターフェイスのための高分子材料・デバイス」（招待講演）</li>
+            <p>自分で行う発表のみを表記</p>
+            <ul class='publication' reversed>
+                <li>（To be announced）</li>
             </ul>
 
             <h3>発表</h3>
-         <p>自分で行った発表のみを表記。日本語表記と英語表記が混在しており、整理中です。</p>
-        <ol class='publication' reversed>
-            {{#each presentation_ja}}
-            <li>{{{presentation .}}}</li>
-            {{/each}}
-        </ol>
+            <p>自分で行った発表のみを表記。日本語表記と英語表記が混在しており、整理中です。</p>
+            <ol class='publication' reversed>
+                {{#each presentation_ja}}
+                <li>{{{presentation .}}}</li>
+                {{/each}}
+            </ol>
         </div>
     </div>
 </div>
-
-
