Add and remove grants

--- a/about/assemble/src/pages/grants.ja.hbs
+++ b/about/assemble/src/pages/grants.ja.hbs
@@ -24,16 +24,16 @@ name: grants
                 <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
             </ol>
             <h3 id='plan'>受託研究費・学内グラント</h3>
+            <p>主なものを以下に記載</p>
             <ol class='grant' reversed>
+                <li>2019年度 COI若手連携研究ファンド「タンパク質製剤の安心安全な利用を実現するポータブル・ウェアラブル計測・品質管理デバイスの開発」（共同代表）</li>
                 <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「科学実験の効率を劇的に向上するための実験自動記録・実験計画支援・ラボオートメーション手法の探索」（代表）</li>
                 <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「地域コミュニティで「育てる」ローカルモビリティを支援するためのデジタル技術」（共同代表）</li>
                 <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「足を護りセンシングするアフリカ地下足袋の協創に関する研究」（分担）</li>
-                <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第二ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるハイブリッドフィルタの開発」（分担）</li>
-                <li>2018年度 東北大学 学際科学フロンティア研究所 領域創成研究プログラム「生体とデバイスとをシームレスに接続するハイブリッドインターフェースの開発」（分担）</li>
                 <li>2018年度 COI若手連携研究ファンド「皮膚組織液による皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
-                <li>2017年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるバイオフィルタの開発と評価」（分担）</li>
                 <li>2017年度 COI若手連携研究ファンド「細胞外ATPを指標とする皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
             </ol>
+            <p>その他5件 </p>
         </div>
     </div>
 </div>
