--- a/about/assemble/src/pages/contact.hbs
+++ b/about/assemble/src/pages/contact.hbs
@@ -16,12 +16,11 @@ name: contact
         <div class="col-md-12">
             <div>
                 Hiroyuki Kai <br>
-                Division of Mechanical Engineering<br>
+                Advanced Institute for Materials Research (AIMR)<br>
                 Tohoku University<br>
                 Japan<br>
                 <br>
                 Email: kai[at]tohoku[dot]ac[dot]jp<br>
-                Phone: +81-22-795-3586
             </div>
         </div>
     </div>
