--- a/about/assemble/src/pages/contact.ja.hbs
+++ b/about/assemble/src/pages/contact.ja.hbs
@@ -15,11 +15,10 @@ name: contact
     <div class="row">
         <div class="col-md-12">
             <div>
-                甲斐洋行 (Hiroyuki Kai) <br>
-                東北大学　工学研究科　機械・知能系<br>
+                甲斐 洋行 (Hiroyuki Kai) <br>
+                東北大学　材料科学高等研究所（AIMR）<br>
                 <br>
-                Email: kai[at]tohoku[dot]ac[dot]jp<br>
-                Phone: +81-22-795-3586
+                Email: kai[at]tohoku[dot]ac[dot]jp
             </div>
         </div>
     </div>
