Use Publons instead of ResearcherID

--- a/about/assemble/src/pages/publication.ja.hbs
+++ b/about/assemble/src/pages/publication.ja.hbs
@@ -19,8 +19,7 @@ name: publication
               ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
             </li>
             <li>
-              ResearcherID: <a href="http://www.researcherid.com/rid/H-8704-2015">H-8704-2015</a>
-              <span id='badgeCont794084' style='width:26px'><script defer src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>                  </li>
+              Publons Author ID: <a href="https://publons.com/a/1236077">1236077</a>
             </li>
             <li>
               Scopus Author ID: <a href="http://www.scopus.com/authid/detail.uri?authorId=56763601000">56763601000</a>
