--- a/about/assemble/src/layouts/default.ja.hbs
+++ b/about/assemble/src/layouts/default.ja.hbs
@@ -28,6 +28,12 @@
         color: #999999 ! important;
         background: #200 ! important;
     }
+    .btn:focus,.btn:active {
+        outline: none !important;
+    }
+    .btn.active {
+        font-weight: bold;
+    }
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -39,7 +45,6 @@
   ga('send', 'pageview');
 
 </script>
-
 </head>
 
 <body>
@@ -95,6 +100,7 @@
         $("#wrapper").toggleClass("active");
     });
     </script>
+    <script src='js/main.js'></script>
 </body>
 
 </html>
