Update presentation and news

--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -32,7 +32,7 @@ name: index
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　9月に3件発表します。（9月3日）</p>
+            <p>ニュース：　<a href="http://www.katahira-f.tohoku.ac.jp/special.html">片平まつり2019</a>で発表します（10月12日）</p>
 
             <h3>所属</h3>
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
