--- a/about/assemble/src/pages/presentation.hbs
+++ b/about/assemble/src/pages/presentation.hbs
@@ -6,7 +6,7 @@ name: presentation
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Presentations
+        Selected presentations
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
