--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -32,8 +32,11 @@ name: index
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　7月2-3日に<a
-                    href="https://www.coi-conference.org/2020/">第3回COI学術交流会</a>をオンライン開催します。皆様のご参加をお待ちしております。（5月28日）</p>
+            <p>ニュース：　7月2-3日にオンライン開催した<a href="https://www.coi-conference.org/2020/">第3回COI学術交流会</a>のために開発した<a
+                    href="https://github.com/hirokai/virtual-poster">バーチャルポスターセッション</a>について，<a
+                    href="https://www.jst.go.jp/pr/jst-news/backnumber/2020/202008/pdf/2020_08.pdf">JSTnews</a>および<a
+                    href="https://www.tohoku.ac.jp/japanese/2020/08/press20200821-04-withpost.html">東北大学のプレスリリース</a>に掲載されました。（8月24日）
+            </p>
 
             <h3>所属</h3>
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
@@ -60,6 +63,7 @@ name: index
             <section id='award'>
                 <h3>受賞</h3>
                 <ol class='award' reversed>
+                    <li>2020年7月3日 第3回COI学術交流会 最優秀ポスター賞「オンラインRPGを模倣したユーザーインターフェースを有するインタラクティブポスターセッションソフトウェアの開発」</li>
                     <li>2019年12月10日 RIKEN CEMS Rising Star Award in CEMSupra 2019</li>
                     <li>2019年6月 第5回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
                     <li>2019年3月 田中貴金属記念財団 2018年度「貴金属に関わる研究助成金」萌芽賞「多孔質マイクロニードル電極の開発と高精度経皮投薬への応用」</li>
