--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -33,7 +33,7 @@ name: index
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
             <p>ニュース：　7月2-3日にオンライン開催した<a href="https://www.coi-conference.org/2020/">第3回COI学術交流会</a>のために開発した<a
-                    href="https://github.com/hirokai/virtual-poster">バーチャルポスターセッション</a>について，<a
+                    href="https://www.virtual-poster.net/">バーチャルポスターセッション</a>について，<a
                     href="https://www.jst.go.jp/pr/jst-news/backnumber/2020/202008/pdf/2020_08.pdf">JSTnews</a>および<a
                     href="https://www.tohoku.ac.jp/japanese/2020/08/press20200821-04-withpost.html">東北大学のプレスリリース</a>に掲載されました。（8月24日）
             </p>
