--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -34,6 +34,8 @@ name: index
 
             <p>ニュース
             <ul>
+                <li>バーチャルポスターセッションについて，<a
+                        href="https://shingi.jst.go.jp/kobetsu/tohoku/2021_tohoku.html">JST新技術説明会</a>で発表します。</li>
                 <li>科研費 基盤研究(B)に採択されました（2021年4月1日）。</li>
                 <li>
                     金メッキ多孔質マイクロニードルによるグルコースセンサに関する論文が<a
