--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -30,7 +30,7 @@ name: index
         <div class="col-md-12">
             <img src="img/welcome.jpg" width='105%' style="margin: -20px -50px 0px -20px;"><br>
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
-            <p class="lead">材料化学を基板とした微小構造・表面制御を元に、マイクロ流体デバイスやウェアラブルセンサ・デバイスへと展開しています。</p>
+            <p class="lead">材料化学を基盤とした微小構造・表面制御を元に、マイクロ流体デバイスやウェアラブルセンサ・デバイスへと展開しています。</p>
 
             <p>ニュース
             <ul>
