Update affiliation and news

--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -34,16 +34,14 @@ name: index
 
             <p>ニュース
             <ul>
-                <li>私が共著者として参加した東北大学の山本俊介先生の研究が、Advanced Materials Interfaces誌に<a href="https://doi.org/10.1002/admi.202201736">掲載</a>されました（2022年11月3日）。
-                </li>
-                <li>ボストンで開催される2022 MRS Fall Meetingにおいて、11月30日に口頭発表します（2022年11月3日）。
+                <li>2023年4月1日付で、東洋大学理工学部生体医工学科に着任し、研究室を立ち上げました（2023年4月4日）。
                 </li>
             </ul>
 
             </p>
 
             <h3>所属</h3>
-            東京理科大学理学部第一部応用物理学科 助教（木下研究室）（2022年4月より）<br>
+            東洋大学理工学部生体医工学科（2023年4月より）<br>
 
             <h3>研究内容</h3>
             材料化学やマイクロ流体科学に立脚した，微小流体制御材料の構築とデバイス・センサ応用
@@ -58,7 +56,8 @@ name: index
 
             <h3>経歴</h3>
             <ul>
-                <li>2022-: 東京理科大学理学部第一部応用物理学科 助教（木下健太郎教授 研究室）</li>
+                <li>2023-現在: 東洋大学理工学部生体医工学科 准教授</li>
+                <li>2022-2023: 東京理科大学理学部第一部応用物理学科 助教（木下健太郎教授 研究室）</li>
                 <li>2019-2022: 東北大学材料科学高等研究所（AIMR） 助教（熊谷明哉准教授 グループ）</li>
                 <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教（西澤松彦教授 研究室）</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
