--- a/about/assemble/src/pages/index.hbs
+++ b/about/assemble/src/pages/index.hbs
@@ -31,15 +31,15 @@ name: index
             <img src="img/welcome.jpg" width='105%' style="margin: -20px -50px 0px -20px;"><br>
             <div class="photo-annotation">View from Santorini, Greece.</div>
             <section class="lead">
-                Welcome to Hiro Kai's website!<br>Taking advantage of materials chemistry, I develop a wearable patch that interacts with living skin.
+                Welcome to Hiro Kai's website!
             </section>
             <section id='affiliation'>
                 <h3>Affiliation</h3>
-                Advanced Institute for Materials Research (AIMR), Tohoku University (from April, 2019).<br>
+                Department of Biomedical Engineering, Toyo University (from April, 2023).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
-                    Development of wearable biosensors based on materials science and electrochemistry.
+                    Microfluidic materials and devices based on materials chemistry and microfluidics, and their applications to biosensors and biodevices.
             </section>
             <section id='research-past'>
                 <h3>Past topics of research</h3>
@@ -53,8 +53,10 @@ name: index
             <section id='experience'>
                 <h3>Education and experience</h3>
                 <ul>
-                    <li>2019: Research Associate, Advanced Institute for Materials Research, Tohoku University</li>
-                    <li>2015-2019: Research Associate, Department of Engineering, Tohoku University.</li>
+                    <li>2023-: Associate Professor, Department of Biomedical Engineering, Toyo University</li>
+                    <li>2022-2023: Assitant Professor, Department of Applied Physics, Tokyo University of Science</li>
+                    <li>2019-2022, Assitant Professor, Advanced Institute for Materials Research, Tohoku University</li>
+                    <li>2015-2019: Research Assistant Professor, Department of Engineering, Tohoku University.</li>
                     <li>2010-2015: Graduate Student Researcher, Department of Chemistry, University of California, Berkeley. PhD in Chemistry.</li>
                     <li>2008-2010: Researcher, Nanoelectronics Laboratory, NEC Corporation.</li>
                     <li>2006-2008: Department of Chemistry and Biotechnology, The University of Tokyo (Master of Engineering)</li>
