--- a/about/assemble/src/pages/contact.ja.hbs
+++ b/about/assemble/src/pages/contact.ja.hbs
@@ -16,9 +16,9 @@ name: contact
         <div class="col-md-12">
             <div>
                 甲斐 洋行 (Hiroyuki Kai) <br>
-                東北大学　材料科学高等研究所（AIMR）<br>
+                東洋大学 理工学部 生体医工学科<br>
                 <br>
-                Email: kai[at]tohoku[dot]ac[dot]jp
+                Email: kai009[at]toyo[dot]jp
             </div>
         </div>
     </div>
