--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -68,15 +68,12 @@ name: index
                 <li>2002-2006: 東京大学工学部化学生命工学科　学士課程</li>
             </ul>
             <section id='award'>
-                <h3>受賞</h3>
+                <h3>主な受賞</h3>
                 <ol class='award' reversed>
-                    <li>2020年7月3日 第3回COI学術交流会 最優秀ポスター賞「オンラインRPGを模倣したユーザーインターフェースを有するインタラクティブポスターセッションソフトウェアの開発」</li>
                     <li>2019年12月10日 RIKEN CEMS Rising Star Award in CEMSupra 2019</li>
                     <li>2019年6月 第5回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
                     <li>2019年3月 田中貴金属記念財団 2018年度「貴金属に関わる研究助成金」萌芽賞「多孔質マイクロニードル電極の開発と高精度経皮投薬への応用」</li>
                     <li>2018年7月 第4回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
-                    <li>2018年6月 Biosensors &amp; Bioelectronics Best Paper Award 2018 Runner Up "Organic electrochromic
-                        timer for enzymatic skin patches"</li>
                     <li>2018年5月 化学とマイクロ・ナノシステム学会 第37回研究会 優秀研究賞</li>
                     <li>2018年3月 花王芸術・科学財団 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」</li>
                 </ol>
