--- a/about/assemble/src/pages/index.ja.hbs
+++ b/about/assemble/src/pages/index.ja.hbs
@@ -34,6 +34,8 @@ name: index
 
             <p>ニュース
             <ul>
+                <li>6月28日にTransducers 2023で口頭発表します（2023年6月25日）。
+                </li>
                 <li>3月16日に<a href="https://meeting.jsap.or.jp/jsap2023s/">第70回応用物理学会春季学術講演会</a>で発表した東京理科大学B4（当時）の瀬川君が、<a href="https://www.jsap.or.jp/docs/awards/poster-award-recipients21.pdf">Poster Award</a>を受賞しました。おめでとうございます！（2023年5月21日）。
                 </li>
                 <li>2023年4月1日付で、東洋大学理工学部生体医工学科に着任し、研究室を立ち上げました（2023年4月4日）。
